removed link to example site

--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,16 @@
 
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://example.org/">
+<link rel="canonical" href="/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.bc1149f4a72aa4858d3a9f71462f75e5884ffe8073ea9d6d5761d5663d651e20.css" integrity="sha256-vBFJ9KcqpIWNOp9xRi915YhP/oBz6p1tV2HVZj1lHiA=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://example.org/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://example.org/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://example.org/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://example.org/apple-touch-icon.png">
-<link rel="mask-icon" href="http://example.org/safari-pinned-tab.svg">
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<link rel="mask-icon" href="/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="http://example.org/index.xml">
+<link rel="alternate" type="application/rss+xml" href="/index.xml">
 <noscript>
     <style>
         #theme-toggle,
@@ -31,7 +31,7 @@
 </noscript><meta property="og:title" content="Karthik Guruvayurappan" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" />
+<meta property="og:url" content="/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Karthik Guruvayurappan"/>
@@ -42,9 +42,9 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Karthik Guruvayurappan",
-  "url": "http://example.org/",
+  "url": "/",
   "description": "",
-  "thumbnailUrl": "http://example.org/favicon.ico",
+  "thumbnailUrl": "/favicon.ico",
   "sameAs": [
       "https://github.com/somet3000", "https://scholar.google.com/citations?user=RWn1XV4AAAAJ\u0026hl=en", "https://www.linkedin.com/in/karthik-guruvayurappan-172747163/", "https://genomic.social/@somet3000", "https://twitter.com/somet3000"
   ]
@@ -57,7 +57,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://example.org/" accesskey="h" title="Karthik Guruvayurappan (Alt + H)">Karthik Guruvayurappan</a>
+            <a href="/" accesskey="h" title="Karthik Guruvayurappan (Alt + H)">Karthik Guruvayurappan</a>
             <div class="logo-switches">
             </div>
         </div>
@@ -119,7 +119,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="http://example.org/">Karthik Guruvayurappan</a></span>
+    <span>&copy; 2022 <a href="/">Karthik Guruvayurappan</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
