--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
   "description": "",
   "thumbnailUrl": "/favicon.ico",
   "sameAs": [
-      "https://github.com/somet3000", "https://scholar.google.com/citations?user=RWn1XV4AAAAJ\u0026hl=en", "https://www.linkedin.com/in/karthik-guruvayurappan-172747163/", "https://genomic.social/@somet3000", "https://twitter.com/somet3000"
+      "https://github.com/somet3000", "https://scholar.google.com/citations?user=RWn1XV4AAAAJ\u0026hl=en", "https://www.linkedin.com/in/karthik-guruvayurappan-172747163/", "https://genomic.social/@somet3000", "https://twitter.com/somet3000", "karthik_guruvayurappan_cv.pdf"
   ]
 }
 </script>
@@ -109,6 +109,16 @@
     <path
         d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z">
     </path>
+</svg>
+    </a>
+    <a href="karthik_guruvayurappan_cv.pdf" target="_blank" rel="noopener noreferrer me" title="Cv">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path
+        d="M4 4v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8.342a2 2 0 0 0-.602-1.43l-4.44-4.342A2 2 0 0 0 13.56 2H6a2 2 0 0 0-2 2z" />
+    <path d="M9 13h6" />
+    <path d="M9 17h3" />
+    <path d="M14 2v4a2 2 0 0 0 2 2h4" />
 </svg>
     </a>
 </div>
